--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Donate-Today</title>
 </head>
 <body>
-    
+    <section id="banner">
+        <h1>Let’s Help Those Who Are More In Need</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        <a class="link_btn" href="#">Donate Now</a>
+    </section>
 </body>
 </html>
