--- a/index.html
+++ b/index.html
@@ -5,12 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate-Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section id="banner">
-        <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+
+    <section id="banner" class="align_center">
+        <h1>Let’s Help flood affected people,</h1>
+        <p>we are helping flood affected people in sylhet. You can join with us .we need money for help them, we need some volunteer. If you want to help, join with us.</p>
         <a class="link_btn" href="#">Donate Now</a>
+    </section>
+
+    <section id="donate_sec"class="align_center">
+        <div class="sec_ttl">
+            <h2>Donate Today</h2>
+            <p>You can donate any amount of money. Your donate we will sent flood affected people in sylhet.They need you help. The very helpless .</p>
+        </div>
+        <div class="amount row ">
+            <div class="amount_item">
+                <h3>100tk</h3>
+            </div>
+            <div class="amount_item active">
+                <h3>200tk</h3>
+            </div>
+            <div class="amount_item">
+                <h3>500tk</h3>
+            </div>
+            <div class="amount_item">
+                <h3>1000tk</h3>
+            </div>
+            <div class="amount_item">
+                <h3>5000tk</h3>
+            </div>
+        </div>
+        <div class="donate_form align_center">
+            <form >
+                <input type="text" placeholder="Other Amount (Taka)">
+            </form>
+            <a href="#" class="link_btn">Donate Now</a>
+        </div>
+    </section>
+    <section id="our_plan">
+        <div class="sec_ttl">
+            <h2>Our Donate Plan</h2>
+            <p>We want to help them by making house, give food.we have list who lose their house, land and everything.we are going to help them ,Let’s join with us .</p>
+        </div>
     </section>
 </body>
 </html>
