--- a/index.html
+++ b/index.html
@@ -52,6 +52,33 @@
             <h2>Our Donate Plan</h2>
             <p>We want to help them by making house, give food.we have list who lose their house, land and everything.we are going to help them ,Let’s join with us .</p>
         </div>
+        <div class="our_plan_content row">
+            <div class="our_plan_item our_plan_item1">
+                <img src="image/food.png" alt="food">
+                <h3>Food for a family</h3>
+                <p>Flood are everywhere. Everything are going under the flood .They can not eat any thing.No food they have. Some People help them but it's not enough.So many people staying there life with out food. So we want to ensures there food</p>
+            </div>
+            <div class="our_plan_item  our_plan_item2">
+                <img src="image/shelter.png" alt="food">
+                <h3>Shelter for a family</h3>
+                <p>Flood floating everything.They are lost their house.They have nothing to build New house.The have no money.we need to go and help them. We want bulid them new House</p>
+            </div>
+            <div class="our_plan_item our_plan_item3">
+                <img src="image/Frame-1.png" alt="food">
+                <h3>Education for a child</h3>
+                <p>Everything are going under the flood. Child miss their education.Our volunteer Teacher will give them education. We will teach them free. Then they can  take education.</p>
+            </div>
+        </div>
+    </section>
+    <section id="depend" class="row">
+        <div class="half_width">
+            <img src="image/depend.jpg" alt="depend-img">
+        </div>
+        <div class="half_width">
+            <h2>Their lives depend on your donation</h2>
+            <p>They lose everything what was they have.Now they have nothing without us.We need to go now help and donate them.They are depend on us.We have to help them</p>
+            <a href="#" class="link_btn">How to Contribute?</a>
+        </div>
     </section>
 </body>
 </html>
