--- a/index.html
+++ b/index.html
@@ -80,5 +80,16 @@
             <a href="#" class="link_btn">How to Contribute?</a>
         </div>
     </section>
+    <section id="survive" class="row">
+        <div class="half_width">
+            <h2>They need us to survive</h2>
+            <p>Everything are going under the flood.They are survive under the flood.They need help,They need donation.Donate them to survive their life easy. Make them happy. They need you</p>
+            <a href="#" class="link_btn">How to Donate?</a>
+        </div>
+        <div class="half_width">
+            <img src="image/survive.jpg" alt="depend-img">
+        </div>
+    </section>
+    
 </body>
 </html>
