--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
             <img src="image/survive.jpg" alt="depend-img">
         </div>
     </section>
-    
+    <section id="uptade">
+        <div class="sec_ttl">
+            <h2>Get My Updates</h2>
+            <P>We are are helping flood affected people.If you want to help, join with us.You can see our updated here. Let's Follow us on youtube</P>
+        </div>
+        <div class="subscribe_area">
+            <form action="">
+                <input type="email" placeholder="Email">
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
+
+    </section>
+    <footer>
+        <h2>Be helpful and Give donate</h2>
+        <p>We are going to help them. Let's join with us and be kind</p>
+    </footer>
 </body>
 </html>
