--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         <div class="half_width">
             <h2>Their lives depend on your donation</h2>
             <p>They lose everything what was they have.Now they have nothing without us.We need to go now help and donate them.They are depend on us.We have to help them</p>
-            <a href="#" class="link_btn">How to Contribute?</a>
+            <a href="#" class="link_btn">How to Donate?</a>
         </div>
     </section>
     <section id="survive" class="row">
         <div class="half_width">
-            <h2>They need us to survive</h2>
+            <h2>They need Food</h2>
             <p>Everything are going under the flood.They are survive under the flood.They need help,They need donation.Donate them to survive their life easy. Make them happy. They need you</p>
-            <a href="#" class="link_btn">How to Donate?</a>
+            <a href="#" class="link_btn">Donate Food</a>
         </div>
         <div class="half_width">
             <img src="image/survive.jpg" alt="depend-img">
